@@ -1,3 +1,6 @@
+- multiple + mustMatch: incorrect value deletes more then just the incorrect value -> delete only the last value
+- multiple without mustMatch: incorrect value + seperator inserts last match -> don't
+
 
 TODO
 
